<resources>
    <string name="app_name">OrderFood</string>
    <string name="slogan">No matter where you are: where you are at home or in the office, or on the beach. We will find you and we will feed you</string>
    <string name="gach"><u><b><i>Bạn quên mật khẩu đăng nhập?</i></b></u></string>
    <string name="title_activity_home">Thực đơn chính</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Đăng xuất</string>
    <string name="facebook_app_id">162421361046767</string>
    <string name="_84">+84</string>
    <string name="_0938472096">0938472096</string>
    <string name="facebook_login_protocol_name">fb162421361046767</string>
    <string name="title_activity_maps">Map</string>

    <string name="channel_name">Oder Food Notification</string>
    <string name="channel_description">Notification</string>

    <string name="nav_home">Trang chủ</string>
    <string name="nav_favorite">Món ăn yêu thích</string>
    <string name="nav_Order">Giỏ Hàng</string>
    <string name="nav_Order_Details">Danh sách đơn hàng</string>
    <string name="nav_Account">Tài khoản</string>
    <string name="nav_Information">Thông tin tài khoản</string>
    <string name="nav_Log_Out">Đăng xuất</string>
    <string name="restaurant_phone"> <u>Liên lạc với cửa hàng</u></string>
    <string name="google_maps_key">AIzaSyAP9ViAFSCQHr4i_DjkbKcj0Lj2BarZNIk</string>

</resources>
